--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,19 @@
 @tailwind utilities;
 
 @property --num-visits {
-  syntax: "<integer>";
+  syntax: '<integer>';
   initial-value: 0;
   inherits: false;
 }
 
 @property --num-patients {
-  syntax: "<integer>";
+  syntax: '<integer>';
   initial-value: 0;
   inherits: false;
 }
 
 @property --num-access {
-  syntax: "<integer>";
+  syntax: '<integer>';
   initial-value: 0;
   inherits: false;
 }
